--- a/day-4/views/auth/login.ejs
+++ b/day-4/views/auth/login.ejs
@@ -8,7 +8,7 @@
         name="email"
         placeholder="Enter email..."
         class="form-control"
-        value="<%= req.old.email %>"
+        value="<%= req.old.email || req.session.userEmail %>"
     />
     <span class="text text-danger"><%= req.errors.email %></span>
     <input
@@ -21,6 +21,7 @@
     <span class="text text-danger"><%= req.errors.password %></span>
     <div class="mt-3">
         <button class="btn btn-primary">Login</button>
+        <a href="/register" class="btn btn-warning">Register</a>
         <a href="/" class="btn btn-secondary">Cancel</a>
     </div>
 </form>
