--- a/day-4/views/auth/login.ejs
+++ b/day-4/views/auth/login.ejs
@@ -20,8 +20,11 @@
     />
     <span class="text text-danger"><%= req.errors.password %></span>
     <div class="mt-3">
-        <button class="btn btn-primary">Login</button>
-        <a href="/register" class="btn btn-warning">Register</a>
+        <button class="btn btn-primary">Đăng nhập</button>
+        <% if (users.length) { %>
+            <a href="/accounts" class="btn btn-info">Tài khoản đã lưu</a>
+        <% } %>
+        <a href="/register" class="btn btn-warning">Đăng kí</a>
         <a href="/" class="btn btn-secondary">Cancel</a>
     </div>
 </form>
